--- a/src/app/theme/components/baMenu/baMenu.html
+++ b/src/app/theme/components/baMenu/baMenu.html
@@ -4,6 +4,7 @@
       [menuItem]="item"
       (itemHover)="hoverItem($event)"
       (toggleSubMenu)="toggleSubMenu($event)"
+      (logoutUser)="logoutUser($event)"
       *ngFor="let item of menuItems"></ba-menu-item>
   </ul>
   <div class="sidebar-hover-elem" [ngStyle]="{top: hoverElemTop + 'px', height: hoverElemHeight + 'px'}"
