--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -45,9 +45,15 @@
 
                 <form class="reset-password-form" (ngSubmit)="resetPasswordSubmit()" #resetPasswordForm="ngForm" [hidden]="loginOrPassReset != 'passReset'">
                     <p class="form-title">Réinitialiser mon mot de passe</p>
-                    <div class="form-group">
+
+                    <div class="form-group" [hidden]="routingOrigin == 'forgotten'">
                       <label for="loginemail">Adresse mail</label>
                       <input type="email" name="loginemail" id="loginemail" required [(ngModel)]="resetPasswordEmail">
+                    </div>
+
+                    <div class="form-group" [hidden]="routingOrigin != 'forgotten'">
+                      <label for="loginPassword">Mot de passe</label>
+                      <input type="password" name="loginPassword" id="loginPassword" required [(ngModel)]="resetPasswordPassword">
                     </div>
 
                     <div class="CTA">
