Reinit mdp mechanisme / visuel

--- a/src/app/login/login.scss
+++ b/src/app/login/login.scss
@@ -194,8 +194,11 @@ section#formHolder {
   }
 }
 
-.form form .CTA a.switch:hover {
-  color: $info;
+.form form .CTA {
+  a.switch:hover, a.switch-mdp:hover {
+    color: $info;
+    cursor: pointer;
+  }
 }
 
 .form form .error-container {
