--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -27,18 +27,20 @@
                     <p class="form-title">Accès au site</p>
                     <div class="form-group">
                       <label for="loginemail">Adresse mail</label>
-                      <input type="email" name="loginemail" id="loginemail" required [(ngModel)]="loginUser.email">
+                      <input type="email" class="email" name="loginemail" id="loginemail" required [(ngModel)]="loginUser.email">
+                      <span class="error"></span>                                            
                     </div>
 
                     <div class="form-group">
                       <label for="loginPassword">Mot de passe</label>
-                      <input type="password" name="loginPassword" id="loginPassword" required [(ngModel)]="loginUser.password">
+                      <input type="password" class="pass" name="loginPassword" id="loginPassword" required [(ngModel)]="loginUser.password">
+                      <span class="error"></span>                                            
                     </div>
 
                     <div class="CTA">
                       <button type="submit" class="btn btn-info btn-with-icon" value="Login"><i class="ion-android-checkmark-circle"></i>Login</button>
-                      <a href="#" class="switch" (click)="registerForm.reset(); loginForm.reset(); resetPasswordForm.reset()">Je suis nouveau</a>
-                      <a href="#" class="switch-mdp" (click)="switchLoginForm()">Mot de passe oublié</a>
+                      <a class="switch" (click)="registerForm.reset(); loginForm.reset(); resetPasswordForm.reset()">Je suis nouveau</a>
+                      <a class="switch-mdp" (click)="switchLoginForm()">Mot de passe oublié</a>
                     </div>
                     <div class="error-container"><p [ngClass]="messageType" *ngIf="messageTarget == 'login'">{{messageContent}}</p></div>
                 </form>
@@ -46,19 +48,21 @@
                 <form class="reset-password-form" (ngSubmit)="resetPasswordSubmit()" #resetPasswordForm="ngForm" [hidden]="loginOrPassReset != 'passReset'">
                     <p class="form-title">Réinitialiser mon mot de passe</p>
 
-                    <div class="form-group" [hidden]="routingOrigin == 'forgotten'">
-                      <label for="loginemail">Adresse mail</label>
-                      <input type="email" name="loginemail" id="loginemail" required [(ngModel)]="resetPasswordEmail">
+                    <div class="form-group" [hidden]="routingOrigin == 'reset'">
+                      <label for="resetpassEmail">Adresse mail</label>
+                      <input type="email" class="email" name="resetpassEmail" id="resetpassEmail" [required]="routingOrigin == 'reset' ? null : 'true'" [(ngModel)]="resetPasswordEmail">
+                      <span class="error"></span>                                          
                     </div>
 
-                    <div class="form-group" [hidden]="routingOrigin != 'forgotten'">
-                      <label for="loginPassword">Mot de passe</label>
-                      <input type="password" name="loginPassword" id="loginPassword" required [(ngModel)]="resetPasswordPassword">
+                    <div class="form-group" [hidden]="routingOrigin != 'reset'">
+                      <label for="resetpassPassword">Mot de passe</label>
+                      <input type="password" class="pass" name="resetpassPassword" id="resetpassPassword" [required]="routingOrigin == 'reset' ? 'true' : null" [(ngModel)]="resetPasswordPassword">
+                      <span class="error"></span>                      
                     </div>
 
                     <div class="CTA">
                       <button type="submit" class="btn btn-warning btn-with-icon" value="ResetPassword"><i class="ion-android-checkmark-circle"></i>Réinitialiser</button>
-                      <a href="#" class="switch-mdp" (click)="switchLoginForm(); registerForm.reset(); loginForm.reset(); resetPasswordForm.reset()">Annuler</a>
+                      <a class="switch-mdp" (click)="switchLoginForm(); registerForm.reset(); loginForm.reset();">Annuler</a>
                     </div>
                     <div class="error-container"><p [ngClass]="messageType" *ngIf="messageTarget == 'reset-password'">{{messageContent}}</p></div>
                 </form>
@@ -102,7 +106,7 @@
 
                     <div class="CTA">
                       <button type="submit" class="btn btn-info btn-with-icon" id="submit"><i class="ion-android-create"></i>Créer</button>
-                      <a href="#" class="switch" (click)="registerForm.reset(); loginForm.reset(); resetPasswordForm.reset()">J'ai déjà un compte</a>
+                      <a class="switch" (click)="registerForm.reset(); loginForm.reset(); resetPasswordForm.reset()">J'ai déjà un compte</a>
                     </div>
                     <div class="error-container"><p [ngClass]="messageType" *ngIf="messageTarget == 'register'">{{messageContent}}</p></div>
                 </form>
