Animation fluide pour le menu, deplacement du logout et suppression de la page profil

--- a/src/app/theme/components/baContentTop/baContentTop.html
+++ b/src/app/theme/components/baContentTop/baContentTop.html
@@ -1,5 +1,5 @@
 <div class="content-top clearfix">
-  <a href (click)="toggleMenu()" class="collapse-menu-link ion-navicon"></a>
+  <a href (click)="toggleMenu()" class="collapse-menu-link" [ngClass]="menuLink"></a>
   <!--<h1 class="al-title">{{ activePageTitle }}</h1>
 
   <ul class="breadcrumb al-breadcrumb">
