--- a/src/app/theme/components/baContentTop/baContentTop.scss
+++ b/src/app/theme/components/baContentTop/baContentTop.scss
@@ -47,23 +47,26 @@ h1.al-title {
 }
 
 a.collapse-menu-link {
-  font-size: 16px;
+  font-size: 24px;
   cursor: pointer;
   display: block;
   //text-decoration: none;
   line-height: 56px;
-  color: $sidebar-text;
+  color: $wavestone-purple;
   padding: 0 5px 0 5px;
   float: left;
-  margin: -3px 0 0 -40px;
-  background-color: $wavestone-purple;
-  border-bottom-right-radius: 8px;
-  border-top-right-radius: 8px;
+	transition: transform 1s ease-in-out;
+  transform: rotate(0deg);
+  margin: -3px 0 0 -30px;
 
   &:hover {
     text-decoration: none;
-    color: white;
+    color: $info;
   }
+}
+
+a.ion-chevron-right, a.ion-close-round {
+  transform: rotate(-360deg);
 }
 
 @media (max-width: $resXXS) {
