2nd About page version

--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -15,13 +15,25 @@
   </div>
 </div>
 <div class="row">
-	<div class="col-xs-6">
-	    <ba-card title="Description et rôle du CE" baCardClass="medium-card">
-	    Description
+	<div class="col-xlg-3 col-lg-6  col-md-6 col-sm-6 col-xs-12">
+	    <ba-card title="Objectifs du CE" baCardClass="medium-card">
+	    Objectifs du CE
 	    </ba-card>
 	</div>
 
-	<div class="col-xs-6">
+	<div class="col-xlg-3 col-lg-6  col-md-6 col-sm-6 col-xs-12">
+	    <ba-card title="Un CE qui est là pour vous" baCardClass="medium-card">
+	    Un CE qui est là pour vous
+	    </ba-card>
+	</div>
+
+	<div class="col-xlg-3 col-lg-6  col-md-6 col-sm-6 col-xs-12">
+	    <ba-card title="De mulples activités" baCardClass="medium-card">
+	    De activités
+	    </ba-card>
+	</div>
+
+	<div class="col-xlg-3 col-lg-6  col-md-6 col-sm-6 col-xs-12 ">
 		<div>
 			<h1>Contacter le CE </h1>
 			<form style="background:white;">
@@ -44,7 +56,7 @@
 </div>
 <div class="row">
 	<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-	    <ba-card title="L'Equipe du CE" baCardClass="medium-card with-scroll">
+	    <ba-card title="Votre équipe du CE" baCardClass="medium-card with-scroll">
 	      <feed></feed>
 	    </ba-card>
 	</div>
