--- a/src/app/pages/clubs/clubs.scss
+++ b/src/app/pages/clubs/clubs.scss
@@ -1,20 +1,22 @@
-.club-img{
+.my-club-img{
 	width: 100%;
 	margin-left:0%;
 	margin-right: 0%;
 	display:flex;
 	align-items:center;
+	z-index:0;
 }
 
-.club-title{
+.my-club-title{
 	font-size: 30px;
 	text-align: center;
 	text-transform: uppercase;
 	letter-spacing: 3px;
 	text-shadow: 1px 1px black;
+	position: relative;
 }
 
-.club-subtitle{
+.my-club-subtitle{
 	display: flex;
 	font-size: 13px;
 	text-align: center;
@@ -25,7 +27,7 @@
 	margin-right: auto;
 }
 
-.club-card {
+.my-club-card {
   color: #666666;
   background-color: #ffffff;
   border-style: solid;
@@ -34,8 +36,8 @@
   z-index:0;
 }
 
-.row{
+.my-row{
 	display:flex;
 	margin-right: 2%;
-  margin-left: 2%;
+  	margin-left: 2%;
 }
