--- a/src/app/pages/clubs/components/soccerClubs/soccerClubs.html
+++ b/src/app/pages/clubs/components/soccerClubs/soccerClubs.html
@@ -1,63 +1,62 @@
 <div *ngFor="let club of clubs">
-	<div *ngIf="club.title.includes('Club Soccer')">
-		<div id="{{club.id}}">
-			<div class="club-card">
-				<div class="row"><!--IMAGE DE BANNER-->
-					<img [src]="club.imgUrl" class="club-img">
-				</div>
-				<div class="separator"></div>
-				<div class="row">
-					<div class="col-md-12">
-						<div class="club-title">{{club.title}}</div>
-					</div>
+	<div *ngIf="club.title.includes('Club Soccer')"><!--VA CHANGER POUR CHAQUE CLUB-->
+		<div class="my-club-card">
+			<div class="my-row"><!--IMAGE DE BANNER-->
+				<img [src]="club.imgUrl" class="my-club-img">
 			</div>
 			<div class="separator"></div>
-			<div class="row">
+			<div class="my-row">
+				<div class="col-md-12">
+					<div class="my-club-title">{{club.title}}</div>
+				</div>
+			</div>
+			<div class="separator"></div>
+			<div class="my-row">
 				<div class="col-md-12">
 					<div innerHtml={{club.description}} style="text-align: justify;"></div>
 				</div>
 			</div>
 			<div class="separator"></div>
-			<div class="row">
-					<div class="col-md-6"> <!--ELIGIBILITE-->
-				<div class="club-subtitle">Bénéficiaires</div>
-				<div class="separator"></div>
-				<div *ngIf="club.eligibility.includes('b')">
-					<button class="btn btn-lg disabled" style="background: #2B90F5" aria-disabled="true">CE  Bleu</button>
-				</div>
-						<div *ngIf="club.eligibility.includes('o')">
-							<button class="btn btn-lg disabled" style="background: #E28356" aria-disabled="true">CE Orange</button>
-				</div>
+			<div class="my-row">
+				<div class="col-md-6"> <!--ELIGIBILITE-->
+					<div class="my-club-subtitle">Bénéficiaires</div>
+					<div class="separator"></div>
+					<div *ngIf="club.eligibility.includes('b')">
+						<button class="btn btn-lg disabled" style="background: #2B90F5" aria-disabled="true">CE  Bleu</button>
+					</div>
+					<div *ngIf="club.eligibility.includes('o')">
+						<button class="btn btn-lg disabled" style="background: #E28356" aria-disabled="true">CE Orange</button>
+					</div>
 				</div>
 				<div class="col-md-6">
-					<div class="club-subtitle">Tarifs d'adhésion</div>
+					<div class="my-club-subtitle">Tarifs d'adhésion</div>
 					<div class="separator"></div>
-				{{club.cost}} € d'adhésion.
+					{{club.cost}} € d'adhésion.
 				</div>
+			</div>
+			<div class="separator"></div>
+			<div class="my-row">
+				<div class="col-md-6"><!--PAIEMENT-->
+					<div class="my-club-subtitle">Modalités de paiement</div>
+					<div class="separator"></div>
+					bbbbb
 				</div>
-				<div class="separator"></div>
-				<div class="row">
-					<div class="col-md-6"><!--PAIEMENT-->
-						<div class="club-subtitle">Modalités de paiement</div>
-						<div class="separator"></div>
-						bbbbb
-					</div>
-					<div class="col-md-6"><!--INSCRIPTION-->
-						<div class="club-subtitle">Inscription</div>
-						<div class="separator"></div>
-						bbbbb
-					</div>
+				<div class="col-md-6"><!--INSCRIPTION-->
+					<div class="my-club-subtitle">Inscription</div>
+					<div class="separator"></div>
+					bbbbb
 				</div>
-				<div class="separator"></div>
-				<div class="row">
-					<div class="col-md-12">
-						<div class="club-subtitle">Contacter le {{club.title}}</div>
-					</div>
+			</div>
+			<div class="separator"></div>
+			<div class="my-row">
+				<div class="col-md-12">
+					<div class="my-club-subtitle">Contacter le {{club.title}}</div>
 				</div>
-				<br><br>
-				<div class="row">
-					<div class="col-md-12">
-						<form>
+			</div>
+			<br><br>
+			<div class="my-row">
+				<div class="col-md-12">
+					<form>
 						<div class="form-group">
 							<label for="input01">Objet du message</label>
 							<input type="text" class="form-control" id="input01" placeholder="Objet">
@@ -69,13 +68,12 @@
 						<div class="button-wrapper">
 							<button type="submit button" class="btn btn-default">Envoyer message</button>
 						</div>
-						</form>
-					</div>
+					</form>
 				</div>
-				<br><br>
 			</div>
+			<br><br>
 		</div>
-		<div class="row">
+		<div class="my-row">
 			<button (click)="gotoClubs()">Retour</button>
 		</div>
 	</div>
