Pages Clubs OK - RAF Overview et bouton retour

--- a/src/app/pages/clubs/components/musicClubs/musicClubs.html
+++ b/src/app/pages/clubs/components/musicClubs/musicClubs.html
@@ -1,5 +1,5 @@
 <div *ngFor="let club of clubs">
-	<div *ngIf="club.title.includes('Club Music')"><!--VA CHANGER POUR CHAQUE CLUB-->
+	<div *ngIf="club.title.includes('Club Musique')"><!--VA CHANGER POUR CHAQUE CLUB-->
 		<div class="my-club-card">
 			<div class="my-row"><!--IMAGE DE BANNER-->
 				<img [src]="club.imgUrl" class="my-club-img">
