Bouton retour moins moche

--- a/src/app/pages/clubs/clubs.scss
+++ b/src/app/pages/clubs/clubs.scss
@@ -41,3 +41,10 @@
 	margin-right: 2%;
   	margin-left: 2%;
 }
+
+button.btn.my-btn{
+	background:#503078;
+	color:#FFFFFF;
+	margin-left:2%;
+	margin-rigt:2%;
+}
