--- a/src/app/pages/clubs/components/tennisClubs/tennisClubs.html
+++ b/src/app/pages/clubs/components/tennisClubs/tennisClubs.html
@@ -74,7 +74,7 @@
 			<br><br>
 		</div>
 		<div class="my-row">
-			<button (click)="gotoClubs()">Retour</button>
+			<button class="btn my-btn" (click)="gotoClubs()">Retour</button>
 		</div>
 	</div>
 </div>
