Menu ouvre et ferme lors que la souris est dessus

--- a/src/app/theme/components/baSidebar/baSidebar.html
+++ b/src/app/theme/components/baSidebar/baSidebar.html
@@ -1,5 +1,7 @@
 <aside class="al-sidebar" sidebarResize>
   <ba-menu [menuHeight]="menuHeight"
            [sidebarCollapsed]="isMenuCollapsed"
-           (expandMenu)="menuExpand()"></ba-menu>
+           (expandMenu)="menuExpand()"
+           on-mouseover='menuExpand()'
+           on-mouseout='menuCollapse()'></ba-menu>
 </aside>
