--- a/src/app/theme/components/baContentTop/baContentTop.scss
+++ b/src/app/theme/components/baContentTop/baContentTop.scss
@@ -53,6 +53,7 @@ a.collapse-menu-link {
   //text-decoration: none;
   line-height: 56px;
   color: $wavestone-purple;
+  position: fixed;
   padding: 0 5px 0 5px;
   float: left;
 	transition: transform 1s ease-in-out;
