--- a/src/app/theme/components/baSidebar/baSidebar.scss
+++ b/src/app/theme/components/baSidebar/baSidebar.scss
@@ -6,7 +6,7 @@ $angle-right: "\f101";
 
 .al-sidebar {
   width: $sidebar-width;
-  transition: width 1.5s ease;
+  transition: width 1.0s ease-in-out;
   top: 0;
   left: 0;
   z-index: 1001;
@@ -121,7 +121,7 @@ a.al-sidebar-list-link {
 @mixin layout-collapsed() {
   .al-main {
     margin-left: 50px;
-    transition: margin 1.5s ease;
+    transition: margin 1.0s ease-in-out;
   }
 
   .al-footer {
@@ -192,7 +192,7 @@ a.al-sidebar-list-link {
 @mixin sidebar-collapsed() {
   .al-sidebar {
     width: 52px;
-    transition: width 1.5s ease;
+    transition: width 1.0s ease-in-out;
 
     .fa-angle-down, .fa-angle-up {
       opacity: 0;
@@ -245,7 +245,7 @@ a.al-sidebar-list-link {
   .al-sidebar {
     width: $sidebar-width;
     @include bg-translucent-wavestone-purple(0.7);
-    transition: width 1.5s ease;
+    transition: width 1.0s ease-in-out;
 
     .fa-angle-down, .fa-angle-up {
       opacity: 1;
