--- a/src/app/theme/sass/_layout.scss
+++ b/src/app/theme/sass/_layout.scss
@@ -61,7 +61,7 @@ a {
 
 .al-main {
   margin-left: $left-space;
-  transition: margin 1.5s ease;
+  transition: margin 1.0s ease-in-out;
   padding: 0 0 34px 0;
   min-height: 500px;
   position: relative;
