--- a/src/app/theme/components/baContentTop/baContentTop.html
+++ b/src/app/theme/components/baContentTop/baContentTop.html
@@ -1,6 +1,6 @@
 <div class="content-top clearfix">
   <a href (click)="toggleMenu()" class="collapse-menu-link" [ngClass]="menuLink"></a>
-  <h1 class="al-title">{{ activePageTitle }}</h1>
+  <!--<h1 class="al-title">{{ activePageTitle }}</h1>
 
   <ul class="breadcrumb al-breadcrumb">
     <li class="breadcrumb-item"><a routerLink="/pages/dashboard">Home</a></li>
