erreur de conf index.js 3

--- a/src/app/pages/advantages/advantages.html
+++ b/src/app/pages/advantages/advantages.html
@@ -10,7 +10,7 @@
     		<div class="col-md-1">
     		</div>
 	    	<div class="col-md-5">
-	    		<img src="http://www.kalidea-corporate.com/img/template/logo.jpg" style="align:center">
+	    		<img src="https://www.kalidea-corporate.com/img/template/logo.jpg" style="align:center">
     		</div>
     		<div class="col-md-5">
     			<div class="row">
