--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -17,13 +17,14 @@
 <div class="row">
 	<div class="col-xlg-3 col-lg-6  col-md-6 col-sm-6 col-xs-12">
 	    <ba-card title="Objectifs du CE" baCardClass="medium-card">
-	    Objectifs du CE
+	    Le CE a pour objet d’assurer une expression collective des salariés, permettant la prise en compte permanente de leurs intérêts dans les décisions relatives à la gestion et à l’évolution économique et financière de l’entreprise, à l’organisation du travail, à la formation professionnelle et aux techniques de productions. Le CE assure la gestion des activités sociales et culturelles de l’entreprise.
 	    </ba-card>
 	</div>
 
 	<div class="col-xlg-3 col-lg-6  col-md-6 col-sm-6 col-xs-12">
 	    <ba-card title="Un CE qui est là pour vous" baCardClass="medium-card">
-	    Un CE qui est là pour vous
+	    Le CE vous représente dans les choix et les orientations de l’entreprise.
+	    Nous souhaitons donc créer un véritable dialogue avec l’ensemble des salariés pour mieux défendre l’intérêt collectif.
 	    </ba-card>
 	</div>
 
@@ -34,8 +35,7 @@
 	</div>
 
 	<div class="col-xlg-3 col-lg-6  col-md-6 col-sm-6 col-xs-12 ">
-		<div>
-			<h1>Contacter le CE </h1>
+		<ba-card title="Contacter le CE" baCardClass="with-scroll">
 			<form style="background:white;">
 					  <div class="form-group">
 					    <label for="input01">Objet du message</label>
@@ -50,7 +50,7 @@
 						  <button type="submit button" class="btn btn-default">Envoyer message</button>
 					  </div>
 			</form>
-		</div>
+		</ba-card>
 
 	</div>
 </div>
