--- a/src/app/pages/about/feed/feed.html
+++ b/src/app/pages/about/feed/feed.html
@@ -1,8 +1,9 @@
 <div class="feed-messages-container">
   <div class="feed-message" *ngFor="let message of feed" (click)="expandMessage(message)">
-    <div class="message-icon" *ngIf="message.type == 'text-message'">
-      <img class="photo-icon" src="../../../pages/about/feed/img/{{message.authorId}}.png" />          
-      <!--<img class="photo-icon" src="{{ ( message.author | baProfilePicture ) }}">-->      
+    <div class="message-icon" *ngIf="message.type == 'text-message'" >      
+      <img class="photo-icon" src="../../../assets/img/app/profile/{{message.authorId}}.png" />          
+      <!--<img class="photo-icon" src="{{ ( message.author | baProfilePicture ) }}">--> 
+
     </div>
     <div class="message-icon" *ngIf="message.type != 'text-message'">
       <img class="photo-icon" src="{{ ( message.author | baProfilePicture ) }}">
@@ -10,10 +11,12 @@
     </div>
     <div class="text-block text-message">
       <div class="message-header">
-        <span class="author">{{ message.author }} {{ message.surname}}</span>
+        <span class="author">{{ message.author }}</span>
       </div>
       <div class="message-content line-clamp" [ngClass]="{'line-clamp-2' : !message.expanded}">
-        <span *ngIf="message.preview">{{ message.header }} </span>{{ message.text }}
+        <span *ngIf="message.preview">{{ message.header }}</span>
+        {{ message.text }} <br />
+        {{ message.authorMail }}
       </div>
       <div class="preview" [ngClass]="{'hidden': !message.expanded}" *ngIf="message.preview">
         <a href="{{ message.link }}" target="_blank">
