--- a/src/app/pages/about/feed/feed.scss
+++ b/src/app/pages/about/feed/feed.scss
@@ -22,15 +22,16 @@
 
   .message-icon {
     cursor: pointer;
-    width: 60px;
-    height: 60px;
-    float: left;
+    background-size:cover;
+    width: 80px;
+    height: 80px;
+    float: left;  
     position: relative;
-    margin-left: 20px;
+    margin-left: 15px;
     > img, .media-icon {
       border-radius: 30px;
-      width: 100%;
-      height: 100%;
+      height:100%;
+      width:auto;
     }
 
     .sub-photo-icon {
